; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/test_afl_host/extr_network_mock.c_pbuf_skip.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/test_afl_host/extr_network_mock.c_pbuf_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pbuf = type { i64, %struct.pbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pbuf* @pbuf_skip(%struct.pbuf* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.pbuf*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.pbuf*, align 8
  store %struct.pbuf* %0, %struct.pbuf** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %9 = load i64, i64* %5, align 8
  store i64 %9, i64* %7, align 8
  %10 = load %struct.pbuf*, %struct.pbuf** %4, align 8
  store %struct.pbuf* %10, %struct.pbuf** %8, align 8
  br label %11

11:                                               ; preds = %22, %3
  %12 = load %struct.pbuf*, %struct.pbuf** %8, align 8
  %13 = icmp ne %struct.pbuf* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load %struct.pbuf*, %struct.pbuf** %8, align 8
  %16 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %7, align 8
  %19 = icmp sle i64 %17, %18
  br label %20

20:                                               ; preds = %14, %11
  %21 = phi i1 [ false, %11 ], [ %19, %14 ]
  br i1 %21, label %22, label %31

22:                                               ; preds = %20
  %23 = load %struct.pbuf*, %struct.pbuf** %8, align 8
  %24 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* %7, align 8
  %27 = sub nsw i64 %26, %25
  store i64 %27, i64* %7, align 8
  %28 = load %struct.pbuf*, %struct.pbuf** %8, align 8
  %29 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %28, i32 0, i32 1
  %30 = load %struct.pbuf*, %struct.pbuf** %29, align 8
  store %struct.pbuf* %30, %struct.pbuf** %8, align 8
  br label %11

31:                                               ; preds = %20
  %32 = load i64*, i64** %6, align 8
  %33 = icmp ne i64* %32, null
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i64, i64* %7, align 8
  %36 = load i64*, i64** %6, align 8
  store i64 %35, i64* %36, align 8
  br label %37

37:                                               ; preds = %34, %31
  %38 = load %struct.pbuf*, %struct.pbuf** %8, align 8
  ret %struct.pbuf* %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
